tests/ui/discord-frontend/entity_macro/expected_relates.stderr
error: expected `relates`
  --> tests/ui/discord-frontend/entity_macro/expected_relates.rs:39:5
   |
LL |     expected_relates = []
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

